refactor 5: units section

--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@
                 <div class="circle3 loader-el"></div>
             </div>
         </div>
-        <div class="units-section">
+        <div class="units-section base-color">
         </div>
 
     </main>
