adds google font

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./menu-bar.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./dashboard.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
