feature : added the multipurpose calculator from my 100DaysOfCode repo

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sensei Converter</title>
+    <title>Converter Sensei</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#000013">
     <meta name="apple-mobile-web-app-title" content="Converter Sensei">
