removed eval code

--- a/public/index.html
+++ b/public/index.html
@@ -395,7 +395,7 @@
         </section>
         <!-- </div> -->
     </aside>
-    <script type="module">
+    <!-- <script type="module">
       window.addEventListener('load', () => {
       //register service worker
       if ("serviceWorker" in navigator) {
@@ -405,7 +405,7 @@
           });
       }
     })
-    </script>
+    </script> -->
 
     <script src="./main.js" defer type="module"></script>
     <script src="./data.js" defer type="module"></script>
