feature : added temperature units to calculator-like  converter page

--- a/public/calc.html
+++ b/public/calc.html
@@ -129,24 +129,24 @@
                         <div class="key" data-value="now">now</div>
                     </div>
                     <div id="energy-area-calc-btns">
-                        <div class="key" data-value="&deg;K">&deg;K</div>
-                        <div class="key" data-value="&deg;C">&deg;C</div>
-                        <div class="key" data-value="&deg;F">&deg;F</div>
-                        <div class="key" data-value="j">j</div>
-                        <div class="key" data-value="kj">kj</div>
+                        <div class="key" data-value="K">K</div>
+                        <div class="key" data-value="°C">°C</div>
+                        <div class="key" data-value="°F">°F</div>
+                        <div class="key" data-value="J">J</div>
+                        <div class="key" data-value="kJ">kJ</div>
                         <div class="key" data-value="gcal">gcal</div>
                         <div class="key" data-value="kcal">kcal</div>
                         <div class="key" data-value="Wh">Wh</div>
                         <div class="key" data-value="KWh">KWh</div>
                         <div class="key" data-value="eV">eV</div>
-                        <div class="key" data-value="ft.lb">ft.lb</div>
-                        <div class="key" data-value="Acre">Acre</div>
-                        <div class="key" data-value="Ha">Ha</div>
+                        <div class="key" data-value="ft-lb">ft-lb</div>
+                        <div class="key" data-value="ac">acre</div>
+                        <div class="key" data-value="ha">ha</div>
                         <div class="key" data-value="sqkm">sqkm</div>                   
-                        <div class="key" data-value="sqIn">sqIn</div>
+                        <div class="key" data-value="sqin">sqIn</div>
                         <div class="key" data-value="sqft">sqft</div>
                         <div class="key" data-value="sqm">sqm</div>                   
-                        <div class="key" data-value="sqmile">sqmile</div>                  
+                        <div class="key" data-value="sqmi">sqmi</div>                  
                     </div>
                     <div id="temp-mass-btns">
                         <div class="key" data-value="<sub style='font-size: 0.6em'>2</sub>">BIN</div>
@@ -166,7 +166,7 @@
                         <div class="key" data-value="lb">lb</div>
                         <div class="key" data-value="ton">ton</div>
                         <div class="key" data-value="st">st</div>
-                        <div class="key" data-value="carat">carat</div>                     
+                        <div class="key" data-value="ct">carat</div>                     
                     </div>
                     <div id="conversion-cal-keys">
                         <div class="key" data-value="nm">nm</div>
@@ -179,7 +179,7 @@
                         <div class="key" data-value="in">in</div>
                         <div class="key" data-value="ft">ft</div>
                         <div class="key" data-value="mile">mile</div>
-                        <div class="key" data-value="yrd">yrd</div>
+                        <div class="key" data-value="yd">yd</div>
                         <div class="key" id="equals-btn" data-value="equal">&equals;</div>
                     </div>
                 </section>
