add mass units and fixed decimal numbers error

--- a/public/calc.html
+++ b/public/calc.html
@@ -90,29 +90,28 @@
                         <div class="key" data-value="8">8</div>
                         <div class="key" data-value="9">9</div>
                         <div class="key" id="backspace-btn" data-value="Backspace">&larr;</div>
-                        <div class="key" data-value=" &rarr; ">&rarr;</div>
+                        <div class="key" data-value=" → "> → </div>
                         <div class="key rom" data-value="X">X</div>
                         <div class="key rom" data-value="C">C</div>
                         <div class="key" data-value="4">4</div>
                         <div class="key" data-value="5">5</div>
                         <div class="key" data-value="6">6</div>
                         <div class="key" data-value=" + ">+</div>
-                        <div class="key" data-value=" &ndash; ">-</div>
+                        <div class="key" data-value=" – ">-</div>
                         <div class="key rom" data-value="D">D</div>
                         <div class="key rom" data-value="L">L</div>
                         <div class="key" data-value="1">1</div>
                         <div class="key" data-value="2">2</div>
                         <div class="key" data-value="3">3</div>
                         <div class="key" data-value=" × ">×</div>
-                        <div class="key" data-value=" / ">/</div>
+                        <div class="key" data-value="/">/</div>
                         <div class="key rom" data-value="M">M</div>
                         <div class="key rom" data-value="<sub>ROM</sub>">rom</div>
                         <div class="key" data-value=".">.</div>
                         <div class="key" data-value="0">0</div>
-                        <div class="key" data-value="-">&plusmn;</div>
-                        <div class="key" data-value="e">e</div>
                         <div class="key" data-value="N">N</div>
-
+                        <div class="key"  id="memory-btn">MEM</div>
+                        <div class="key"  id="clear-memory-btn">CM</div>
                     </div>
                     <div id="date-time-calc-btns">
                         <div class="key" data-value="µs">µs</div>
@@ -164,9 +163,9 @@
                         <div class="key" data-value="kg">kg</div>
                         <div class="key" data-value="oz">oz</div>
                         <div class="key" data-value="lb">lb</div>
-                        <div class="key" data-value="ton">ton</div>
+                        <div class="key" data-value="tonne">tonne</div>
                         <div class="key" data-value="st">st</div>
-                        <div class="key" data-value="ct">carat</div>                     
+                        <div class="key" data-value="carat">carat</div>                     
                     </div>
                     <div id="conversion-cal-keys">
                         <div class="key" data-value="nm">nm</div>
