bug fixes ( roman Num, Date ) + history page

--- a/public/calc.html
+++ b/public/calc.html
@@ -46,8 +46,10 @@
                     </div>
                 </section>
                 <section id="screen">
+                    <span class="nav-icon" id="scroll-up-btn"><i class="fa fa-caret-up"></i></span>
                     <div id="top-screen">
                         <p id="calc-mode">date</p><span id="conversion-mode">length</span>
+                        <span style="background-color: #60ff34; display: none;" id="history-mode">History</span>
                     </div>
                     <div id="entered-text">
                         <p id="input-area-wrapper"><span id="input-area"></span><span id="blinking-cursor">_</span></p>
@@ -55,6 +57,7 @@
                     <div id="result">
                         <p></p>
                     </div>
+                    <span class="nav-icon" id="scroll-down-btn"><i class="fa fa-caret-down"></i></span>
                 </section>
             </div>
             <div id="keys-and-control-section">
