--- a/public/calc.html
+++ b/public/calc.html
@@ -29,7 +29,7 @@
   <meta name="msapplication-TileImage" content="./icons/ms-icon-144x144.png">
   <link rel="stylesheet" href="./all.css">
   <link rel="stylesheet" href="./css/calc.css">
-  <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet"> -->
 </head>
 <body>
     <main>
@@ -70,10 +70,10 @@
                         <p class="key" data-value="conv">Conv</p>
                     </div>
                     <div id="direction-pad">
-                        <span id="up-btn"><i class="fa fa-play"></i></span>
-                        <span id="down-btn"><i class="fa fa-play"></i></span>
-                        <span id="left-btn"><i class="fa fa-play"></i></span>
-                        <span id="right-btn"><i class="fa fa-play"></i></span>
+                        <span id="up-btn" class="fa fa-play"></span>
+                        <span id="down-btn" class="fa fa-play"></span>
+                        <span id="left-btn" class="fa fa-play"></span>
+                        <span id="right-btn" class="fa fa-play"></span>
                         <div> </div>
                     </div>
                     <div id="power-section">
