--- a/public/index.html
+++ b/public/index.html
@@ -209,14 +209,14 @@
                             <p class="from-unit" data-from-name="decimal">decimal
                                 <span class="fa fa-caret-down"></span> </p>
                             <input type="text" pattern="" title="digits only allowed" min="1" class="conv-value"
-                                aria-label="conversion value">
+                                aria-label="conversion value" id="numberBaseInput">
                         </div>
                         <div class="switch-conv fa fa-exchange-alt"></div>
                         <div class="to-unit-wrapper">
                             <p class="to-unit" data-to-name="binary">binary
                                 <span class="fa fa-caret-down"></span>
                             </p>
-                            <input type="text" class="result-value" aria-label="resultgoeshere" readonly>
+                            <input type="text" class="result-value" id="numberBaseOutputArea" aria-label="resultgoeshere" readonly>
                         </div>
                     </div>
                 </div>
