--- a/public/calc.html
+++ b/public/calc.html
@@ -192,7 +192,7 @@
             </section>
         </div>
     </main>
-      <script type="module">
+      <!-- <script type="module">
       window.addEventListener('load', () => {
       //register service worker
       if ("serviceWorker" in navigator) {
@@ -202,7 +202,7 @@
           });
       }
     })
-    </script>
+    </script> -->
     <script  defer type="module" src="./js/calc.js"></script>
     <script defer src="./js/resource.js" type="module"></script>
 </body>
