FIX: roman numerals code

--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@
                         <p class="about-app">APPSIDE is an app with a collecton of games like quiz, tictactoe, memory
                             game etc. The
                             games are addictive and most of them are available offline.</p>
-                        <a href="https://appside.com"><button type="button">Goto app <span
+                        <a href="https://appside.netlify.app"><button type="button">Goto app <span
                                     class="fa fa-arrow-circle-right"></span></button></a>
                     </div>
                 </div>
